--- a/z2m-rwl022-scenes.yaml
+++ b/z2m-rwl022-scenes.yaml
@@ -1,5 +1,5 @@
 blueprint:
-  name: MQTT Philips Hue Dimmer Switch (RWL022) v3.0.5
+  name: MQTT Philips Hue Dimmer Switch (RWL022) v3.1.0
   description: Control lights with a Philips Hue Dimmer Switch
   domain: automation
   input:
@@ -215,12 +215,23 @@ trigger:
     subtype: down_hold
     id: down_hold
 
+mode: queued
+max_exceeded: silent
+queue_size: 1 # Add this line
+
 variables:
   command: "{{ trigger.id }}"
   included_scenes: !input included_scenes
   scene_helper: !input scene_helper
   reset_after: !input reset_after
   main_scene: !input main_scene
+  last_action_time: >
+    {% set data = states(scene_helper) %}
+    {% if data != "unknown" %}
+      {{ (data | from_json).timestamp }}
+    {% else %}
+      0
+    {% endif %}
   active_scene: >
     {% set data = states(scene_helper) %}
     {% if data != "unknown" %}
@@ -237,6 +248,12 @@ variables:
 
 action:
   choose:
+    - conditions:
+        - >
+          {{ as_timestamp(now()) - last_action_time < 0.1 and 
+             not command.endswith('_hold') }}
+      sequence:
+        - stop: "Debouncing action"
     - conditions: "{{ command == 'on_press_release' }}"
       sequence:
         - service: scene.turn_on
