Update MQTT Philips Hue Dimmer RWL022 blueprint to version 3.3.2. This release simplifies the action sequence by removing the 'command.endswith('_hold')' condition, enhancing the responsiveness of scene control while maintaining the last action time check for debouncing.

--- a/z2m-rwl022.yaml
+++ b/z2m-rwl022.yaml
@@ -1,5 +1,5 @@
 blueprint:
-  name: "MQTT Philips Hue Dimmer RWL022 (Scene Preset Integration). v3.3.1"
+  name: "MQTT Philips Hue Dimmer RWL022 (Scene Preset Integration). v3.3.2"
   description: >-
     Control lights with a Philips Hue Dimmer Switch. Scene Preset integration is required https://github.com/Hypfer/hass-scene_presets
   domain: automation
@@ -419,8 +419,7 @@ action:
   - choose:
       - conditions:
           - >
-            {{ as_timestamp(now()) - last_action_time < 0.1 and 
-               not command.endswith('_hold') }}
+            {{ as_timestamp(now()) - last_action_time < 0.1 }}
         sequence:
           - stop: "Debouncing action"
       - conditions:
