--- a/z2m-rwl022.yaml
+++ b/z2m-rwl022.yaml
@@ -1,5 +1,5 @@
 blueprint:
-  name: "MQTT Philips Hue Dimmer RWL022 (Scene Preset Integration). v3.3.2"
+  name: "MQTT Philips Hue Dimmer RWL022 (Scene Preset Integration). v3.3.3"
   description: >-
     Control lights with a Philips Hue Dimmer Switch. Scene Preset integration is required https://github.com/Hypfer/hass-scene_presets
   domain: automation
@@ -419,7 +419,7 @@ action:
   - choose:
       - conditions:
           - >
-            {{ as_timestamp(now()) - last_action_time < 0.1 }}
+            {{ as_timestamp(now()) - last_action_time < (transition_time | float) }}
         sequence:
           - stop: "Debouncing action"
       - conditions:
