Enhance MQTT Philips Hue Dimmer RWL022 blueprint by adding a new device trigger condition that checks if the action duration is less than 1 second. This modification improves the responsiveness of the dimmer switch by ensuring quicker action handling during short press events.

--- a/z2m-rwl022.yaml
+++ b/z2m-rwl022.yaml
@@ -1,5 +1,5 @@
 blueprint:
-  name: "MQTT Philips Hue Dimmer RWL022 (Scene Preset Integration). v3.3.3"
+  name: "MQTT Philips Hue Dimmer RWL022 (Scene Preset Integration). v3.3.4"
   description: >-
     Control lights with a Philips Hue Dimmer Switch. Scene Preset integration is required https://github.com/Hypfer/hass-scene_presets
   domain: automation
@@ -317,6 +317,10 @@ trigger:
     type: action
     subtype: on_hold
     id: on_hold
+    platform: device
+    condition:
+      - condition: template
+        value_template: "{{ trigger.payload_json.action_duration < 1 }}"
   - trigger: device
     domain: mqtt
     device_id: !input dimmer_switch
